syntax = "proto3";

package ligato.vpp.l3;

option go_package = "go.ligato.io/vpp-agent/v3/proto/ligato/vpp/l3;vpp_l3";

// ARP Proxy
message ProxyARP {
    message Interface {
        string name = 1;
    }
    // List of interfaces proxy ARP is enabled for.
    repeated Interface interfaces = 1;

    message Range {
        string first_ip_addr = 1;
        string last_ip_addr = 2;
        uint32 vrf_id = 3;
    }
    repeated Range ranges = 2;
}

// IP Neighbour Config
message IPScanNeighbor {
    enum Mode {
        DISABLED = 0;
        IPV4 = 1;
        IPV6 = 2;
        BOTH = 3;
    }
    Mode mode = 1;

    uint32 scan_interval = 2;
    uint32 max_proc_time = 3;
    uint32 max_update = 4;
    uint32 scan_int_delay = 5;
    uint32 stale_threshold = 6;
}

// DHCP Proxy
message DHCPProxy {

    message DHCPServer {
        uint32 vrf_id = 1;
        string ip_address = 2;
    }

    string source_ip_address = 1;
    uint32 rx_vrf_id = 2;
    repeated DHCPServer servers = 4;
}

// IPv6 Neighbor Discovery
message IP6ND {
    // Name of interface this config applies to.
    string interface = 1;
    // Enable IPv6 ND address autoconfiguration.
    bool autoconfig = 2;
    // Enable installing default routes.
    bool install_default_routes = 3;
}